projects/mogambo/dev/catalogue-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  namespace: mogambo
  labels:
    app: catalogue
    env: dev
spec:
  selector:
    app: catalogue
  ports:
    - protocol: TCP
      port: 80
