projects/mogambo/dev/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
  namespace: mogambo
spec:
  podSelector:
    matchLabels:
      app: front-end
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock: 
        cidr: 172.17.0.0/16
        except: 
        - 172.17.1.0/24
